adding link preview

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Gitwrap"/>
+    <meta property="og:description" content="Gitwrap - is a **React + Tailwind** single-page app that turns your GitHub activity into a sleek, personalized year in review. It highlights your coding journey — commits, pull requests, issues, stars, repos, and even your coding style."/>
+    <meta property="og:image" content="./download.png"/>
+    <meta property="og:url" content="https://git-wrap-nine.vercel.app"/>
     <title>Gitwrap</title>
   </head>
   <body data-theme="light" class="overflow-x-clip">
